# DevTeamAutomated

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Correction_to_apply.md  EPIC_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  agent_manager.py  agent_team_framework.py  analysis_team_implementation.py  app.js  docker-compose.prod.yml  docker-compose.yml  index.html  intelligent_orchestrator.py  multi_agent_demo.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  run_frontend.sh
.github/workflows/: ci.yml  release.yml
agents/metadata/: dev_worker.json  orchestrator.json  test_worker.json
config/: llm_config.yaml  llm_providers.yaml
core/: agent_team.py  agent_workers.py  backlog_store.py  collaboration_patterns.py  config.py  dlq.py  evaluation.py  event_utils.py  fact_ledger.py  failures.py  grounding.py  idempotence.py  ingestion.py  llm_agent.py  llm_client.py  llm_config.py  locks.py  metrics.py  phase_runner.py  project_store.py  question_store.py  redis_streams.py  schema_registry.py  schema_validate.py  shared_memory.py  state_machine.py  stream_runtime.py  trace.py  validators.py
demo/: clarification_demo.py  demo_clarification.sh  demo_failure_retry_dlq.sh  demo_happy_path.sh  http_gateway.py  interactive_demo.py  multi_agent_demo.py  run_clarification.sh  run_failure_retry.sh  run_happy_path.sh  run_human_approval.sh  seed_events.py
docs/: AGENT_TEAMS.md  AI_AGENT_SOLUTION.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DOCUMENTATION.md  EPIC5_AI_AGENT_TEAMS.md  GUIDE_INTEGRATION.md  INSTALLATION.md  MULTI_AGENT_ARCHITECTURE.md  README_MULTI_AGENTS.md  TOOL_USAGE.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  compliance_google_agent_guide.md  compliance_plan.md  demo.md  runtime_env.md
prompts/: README.md  reporting_v1.txt  versions.json
reports/: compliance_google_agent_guide.json
schemas/config/: llm_config.v1.schema.json
schemas/envelope/: event_envelope.v1.schema.json
schemas/events/: agent.collaboration_request.v1.schema.json  agent.result_shared.v1.schema.json  backlog.generated.v1.schema.jsonZone.Identifier  backlog.item_created.v1.schema.json  backlog.item_unblocked.v1.schema.json  clarification.needed.v1.schema.json  customer.message_responded.v1.schema.json  deliverable.published.v1.schema.json  human.approval_requested.v1.schema.json  human.approval_submitted.v1.schema.json  orchestrator.message_sent.v1.schema.json  order.anomaly_detected.v1.schema.json  order.draft_created.v1.schema.json  order.export_ready.v1.schema.json  order.inbox_received.v1.schema.json  order.missing_fields_detected.v1.schema.json  order.validated.v1.schema.json  order.validation_required.v1.schema.json  project.initial_request_received.v1.schema.json  question.answer_recorded.v1.schema.json  question.created.v1.schema.json  report.final_published.v1.schema.json  report.project_snapshot_published.v1.schema.json  team.selected.v1.schema.json  team.synthesis_complete.v1.schema.json  user.answer_submitted.v1.schema.json  user.prompt_submitted.v1.schema.json  work.item_completed.v1.schema.json  work.item_dispatched.v1.schema.json  work.item_failed.v1.schema.json  work.item_reviewed.v1.schema.json  work.item_started.v1.schema.json
schemas/objects/: email_draft.v1.schema.json  execution_plan.v1.schema.json  fact_ledger_entry.v1.schema.json  facts.v1.schema.json  inter_agent_message.v1.schema.json  order_draft.v1.schema.json  order_extraction_result.v1.schema.json  order_issue.v1.schema.json  shared_context.v1.schema.json  team_result.v1.schema.json  trace_record.v1.schema.json
tests/: conftest.py  test_compose_integration.py  test_dlq_integration.py  test_dod_validators.py  test_epic3_clarification.py  test_epic5_workers.py  test_evaluation_sanity.py  test_fact_ledger_integrity.py  test_failure_taxonomy.py  test_grounding.py  test_human_approval_gate.py  test_idempotence_logging.py  test_ingestion_excel_empty.py  test_llm_client.py  test_llm_config.py  test_llm_providers.py  test_locks.py  test_orchestrator_dod.py  test_order_intake_agent.py  test_phase_runner.py  test_prompt_versioning.py  test_reclaim_logging.py  test_regression_epic1_contracts.py  test_regression_epic2_backlog_orchestrator.py  test_regression_epic4_ingestion_normalisation.py  test_regression_runtime.py  test_reliable_runtime.py  test_state_machine.py  test_state_machine_illegal_transition.py  test_trace.py  test_validation_unit.py
(+83 files in other folders)
