[project]
name = "audit-flash"
version = "0.1.0"
description = "Audit Flash runtime stack and agent system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.112.2",
    "httpx==0.27.0",
    "jsonschema==4.23.0",
    "openpyxl==3.1.5",
    "pydantic==2.8.2",
    "python-multipart==0.0.9",
    "redis==5.0.7",
    "uvicorn==0.30.5",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pyright>=1.1.370",
    "pytest==8.3.2",
    "ruff>=0.5.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "demo"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
include = ["core", "services", "demo", "tests", "agent_manager.py"]
