[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-workflow"
version = "0.1.0"
description = "General-purpose event-driven workflow automation toolkit built on Redis Streams"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Agentic Workflow Team"}
]
keywords = [
    "python",
    "ai-agents",
    "redis-streams",
    "orchestrator",
    "automation",
    "workflow",
    "event-driven",
    "microservices"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "redis>=5.0.7,<6.0",
    "jsonschema>=4.23.0,<5.0",
    "pydantic>=2.8.2,<3.0",
    "openpyxl>=3.1.5,<4.0",
    "fastapi>=0.112.2,<1.0",
    "uvicorn>=0.30.5,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/BourguignonSimon/DevTeamAutomated"
Documentation = "https://github.com/BourguignonSimon/DevTeamAutomated/blob/main/docs/DOCUMENTATION.md"
Repository = "https://github.com/BourguignonSimon/DevTeamAutomated"
Issues = "https://github.com/BourguignonSimon/DevTeamAutomated/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "agents*"]
exclude = ["tests*", "demo*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that require docker-compose and real Redis",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["core", "services"]
omit = [
    "tests/*",
    "demo/*",
    "services/*/main.py",
    "services/*/__main__.py",
]

[tool.coverage.report]
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
